[tool.poetry]
name = "pycongh22"
version = "0.1.0"
description = ""
authors = ["Baah Kusi <nanakbaahkusi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pytezos = "^3.7.0"
bip-utils = "^2.7.0"
web3 = { git = "https://github.com/ethereum/web3.py" }
python-bitcoinlib = "^0.11.2"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
